tests/ui/typeck/issue-75889.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/issue-75889.rs:3:24
   |
LL | const FOO: dyn Fn() -> _ = "";
   |                        ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for statics
  --> $DIR/issue-75889.rs:4:25
   |
LL | static BOO: dyn Fn() -> _ = "";
   |                         ^ not allowed in type signatures

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0121`.
